syntax = "proto3";

option go_package = "cubecache/rpc";

message GetValueRequest {
  string cubeName = 1;
  string key = 2;
}

message GetValueResponse {
  bytes value = 1;
  bool ok = 2;
}

message CreateCubeRequest{
  string cubeName = 1;
  int64 maxBytes = 2;
  bytes getterFunc = 3;
  bytes onEvictedFunc = 4;
}

message CreateCubeResponse{
  bool success = 1;
}

service GetValue {
  rpc Get(GetValueRequest) returns (GetValueResponse){}
}

service CreateCube {
  rpc CreateCube(CreateCubeRequest) returns(CreateCubeResponse){}
}